--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-relay": "^10.1.2",
     "react-scripts": "4.0.1",
+    "relay-hooks": "^4.0.0-rc.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -34,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-relay": "^10.1.2",
+    "graphql": "^15.4.0",
+    "relay-config": "^10.1.2"
   }
 }
